# app/security.go
@@ -1,0 +1,64 @@
+// Code generated by goagen v1.3.1, DO NOT EDIT.
+//
+// API "forent": Application Security
+//
+// Command:
+// $ goagen
+// --design=forent_api/design
+// --out=$(GOPATH)/src/forent_api
+// --version=v1.3.1
+
+package app
+
+import (
+	"context"
+	"github.com/goadesign/goa"
+	"net/http"
+)
+
+type (
+	// Private type used to store auth handler info in request context
+	authMiddlewareKey string
+)
+
+// UseJWTMiddleware mounts the jwt auth middleware onto the service.
+func UseJWTMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("jwt"), middleware)
+}
+
+// NewJWTSecurity creates a jwt security definition.
+func NewJWTSecurity() *goa.JWTSecurity {
+	def := goa.JWTSecurity{
+		In:       goa.LocHeader,
+		Name:     "Authorization",
+		TokenURL: "",
+		Scopes: map[string]string{
+			"api:access": "API access",
+		},
+	}
+	return &def
+}
+
+// UseSigninBasicAuthMiddleware mounts the SigninBasicAuth auth middleware onto the service.
+func UseSigninBasicAuthMiddleware(service *goa.Service, middleware goa.Middleware) {
+	service.Context = context.WithValue(service.Context, authMiddlewareKey("SigninBasicAuth"), middleware)
+}
+
+// NewSigninBasicAuthSecurity creates a SigninBasicAuth security definition.
+func NewSigninBasicAuthSecurity() *goa.BasicAuthSecurity {
+	def := goa.BasicAuthSecurity{}
+	return &def
+}
+
+// handleSecurity creates a handler that runs the auth middleware for the security scheme.
+func handleSecurity(schemeName string, h goa.Handler, scopes ...string) goa.Handler {
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		scheme := ctx.Value(authMiddlewareKey(schemeName))
+		am, ok := scheme.(goa.Middleware)
+		if !ok {
+			return goa.NoAuthMiddleware(schemeName)
+		}
+		ctx = goa.WithRequiredScopes(ctx, scopes)
+		return am(h)(ctx, rw, req)
+	}
+}
