# swagger/swagger.yaml
@@ -310,28 +310,28 @@ definitions:
     type: array
   CreateCommentPayload:
     example:
-      item_id: 7.676466e+17
-      reply_to: 7.9860344e+18
-      text: Adipisci alias aliquid alias doloremque.
-      user_id: 3.1737714e+18
+      item_id: 7.9860344e+18
+      reply_to: 4.43876e+18
+      text: Alias aliquid alias doloremque quidem.
+      user_id: 2.6171584e+17
     properties:
       item_id:
         description: item id
-        example: 7.676466e+17
+        example: 7.9860344e+18
         format: int64
         type: integer
       reply_to:
         description: comment_id or null
-        example: 7.9860344e+18
+        example: 4.43876e+18
         format: int64
         type: integer
       text:
         description: comment text
-        example: Adipisci alias aliquid alias doloremque.
+        example: Alias aliquid alias doloremque quidem.
         type: string
       user_id:
         description: comment user id
-        example: 3.1737714e+18
+        example: 2.6171584e+17
         format: int64
         type: integer
     required:
@@ -343,9 +343,9 @@ definitions:
     type: object
   CreateItemPayload:
     example:
-      category_id: 2.6171584e+17
-      compensation: 4.379826e+18
-      description: Porro omnis quis rerum.
+      category_id: 4.379826e+18
+      compensation: 5.129667e+18
+      description: Omnis quis rerum.
       image1: Voluptatem quae eaque dignissimos incidunt nesciunt autem.
       image2: Reiciendis laborum odio accusamus officiis veritatis velit.
       image3: Esse repellat dolorem iusto.
@@ -357,17 +357,17 @@ definitions:
     properties:
       category_id:
         description: category ID
-        example: 2.6171584e+17
+        example: 4.379826e+18
         format: int64
         type: integer
       compensation:
         description: compensation of item
-        example: 4.379826e+18
+        example: 5.129667e+18
         format: int64
         type: integer
       description:
         description: description of item
-        example: Porro omnis quis rerum.
+        example: Omnis quis rerum.
         type: string
       image1:
         description: item image 1
@@ -749,40 +749,40 @@ definitions:
     type: array
   ListArticlePayload:
     example:
-      articleID: 5.753931e+18
-      categoryID: 8.2823006e+18
-      itemID: 3.1356596e+18
-      userID: 6.6659316e+18
+      articleID: 8.2823006e+18
+      categoryID: 3.1356596e+18
+      itemID: 6.6659316e+18
+      userID: 5.7810045e+18
     properties:
       articleID:
         description: article ID
-        example: 5.753931e+18
+        example: 8.2823006e+18
         format: int64
         type: integer
       categoryID:
         description: category id
-        example: 8.2823006e+18
+        example: 3.1356596e+18
         format: int64
         type: integer
       itemID:
         description: item ID
-        example: 3.1356596e+18
+        example: 6.6659316e+18
         format: int64
         type: integer
       userID:
         description: user id
-        example: 6.6659316e+18
+        example: 5.7810045e+18
         format: int64
         type: integer
     title: ListArticlePayload
     type: object
   ListCategoryPayload:
     example:
-      middlecategoryID: 5.7810045e+18
+      middlecategoryID: 7.676466e+17
     properties:
       middlecategoryID:
         description: middlecategory id
-        example: 5.7810045e+18
+        example: 7.676466e+17
         format: int64
         type: integer
     title: ListCategoryPayload
@@ -928,6 +928,41 @@ definitions:
     - avatar_image
     - cover_image
     title: 'Mediatype identifier: application/vnd.profile+json; view=default'
+    type: object
+  SignupPayload:
+    example:
+      email: jamesbond@gmail.com
+      password: abcd1234
+    properties:
+      email:
+        example: jamesbond@gmail.com
+        format: email
+        maxLength: 150
+        minLength: 6
+        type: string
+      password:
+        example: abcd1234
+        maxLength: 100
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    title: SignupPayload
+    type: object
+  Success:
+    description: The common media type to all request responses for this example (default
+      view)
+    example:
+      ok: false
+    properties:
+      ok:
+        description: Always true
+        example: false
+        type: boolean
+    required:
+    - ok
+    title: 'Mediatype identifier: application/vnd.security.success; view=default'
     type: object
   UpdateItemPayload:
     example:
@@ -1103,11 +1138,11 @@ definitions:
     description: user (default view)
     example:
       email: notify.forent@gmail.com
-      id: 5.171761e+18
+      id: 6.44637e+17
       password: password
-      profile_id: 6.44637e+17
+      profile_id: 6.706611e+18
       salt: salt
-      verification_id: 6.706611e+18
+      verification_id: 7.9670376e+18
     properties:
       email:
         description: email
@@ -1116,7 +1151,7 @@ definitions:
         type: string
       id:
         description: Unique user ID
-        example: 5.171761e+18
+        example: 6.44637e+17
         format: int64
         type: integer
       password:
@@ -1125,7 +1160,7 @@ definitions:
         type: string
       profile_id:
         description: profile id
-        example: 6.44637e+17
+        example: 6.706611e+18
         format: int64
         type: integer
       salt:
@@ -1134,7 +1169,7 @@ definitions:
         type: string
       verification_id:
         description: verification id
-        example: 6.706611e+18
+        example: 7.9670376e+18
         format: int64
         type: integer
     required:
@@ -1149,29 +1184,29 @@ definitions:
   Verification:
     description: Verification (default view)
     example:
-      email: true
-      facebook_id: 8.1193497e+18
-      google_id: 8.110422e+18
-      id: 2.7445888e+18
+      email: false
+      facebook_id: 8.110422e+18
+      google_id: 2.7445888e+18
+      id: 8.4206917e+18
       identification: false
     properties:
       email:
         description: address flag
-        example: true
+        example: false
         type: boolean
       facebook_id:
         description: Unique facebook ID
-        example: 8.1193497e+18
+        example: 8.110422e+18
         format: int64
         type: integer
       google_id:
         description: Unique google ID
-        example: 8.110422e+18
+        example: 2.7445888e+18
         format: int64
         type: integer
       id:
         description: Unique auth ID
-        example: 2.7445888e+18
+        example: 8.4206917e+18
         format: int64
         type: integer
       identification:
@@ -1638,6 +1673,63 @@ paths:
       summary: update profile
       tags:
       - profile
+  /signin:
+    get:
+      description: |-
+        signup
+
+        Required security scopes:
+          * `api:access`
+      operationId: authentication#sigin
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/SignupPayload'
+      produces:
+      - application/vnd.security.success
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/Success'
+        "401":
+          description: Unauthorized
+      schemes:
+      - http
+      security:
+      - jwt:
+        - api:access
+      summary: sigin authentication
+      tags:
+      - authentication
+  /signup:
+    post:
+      description: signup and Creates a valid JWT
+      operationId: authentication#signup
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/SignupPayload'
+      responses:
+        "204":
+          description: No Content
+          headers:
+            Authorization:
+              description: Generated JWT
+              type: string
+        "401":
+          description: Unauthorized
+      schemes:
+      - http
+      security:
+      - SigninBasicAuth: []
+      summary: signup authentication
+      tags:
+      - authentication
   /users:
     post:
       description: Create new user
@@ -1865,7 +1957,21 @@ responses:
   OK:
     description: OK
     schema:
-      $ref: '#/definitions/Comment'
+      $ref: '#/definitions/Success'
+  Unauthorized:
+    description: Unauthorized
 schemes:
 - http
+securityDefinitions:
+  SigninBasicAuth:
+    type: basic
+  jwt:
+    description: |2-
+
+
+      **Security Scopes**:
+        * `api:access`: API access
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
